working version with resource and compiled class reloading on change